--- a/web/index.html
+++ b/web/index.html
@@ -21,13 +21,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="fast_app_base">
+  <meta name="apple-mobile-web-app-title" content="flutter_toss_clone">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>fast_app_base</title>
+  <title>flutter_toss_clone</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
